<resources>
    <string name="app_name">MyPsikolog</string>
    <string name="welcome_back_login"><b>Welcome Back!</b></string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account?</string>
    <string name="register_here"><u><b>Sign Up</b></u></string>
    <string name="welcome"><b>Welcome :)</b></string>
    <string name="login"><u><b>Login</b></u></string>
    <string name="user">User</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="suicide_hotline_panic_button"><b>Suicide Hotline Panic Button</b></string>
    <string name="today_s_reminder"><b>Today\'s Reminder</b></string>
    <string name="tarik_nafas_tenangkan_pikiran_sejenak_dan_bersyukurlah_anda_masih_dapat_melihat_betapa_indahnya_dunia_hari_ini">Tarik nafas, tenangkan pikiran sejenak, dan bersyukurlah Anda masih dapat melihat betapa indahnya dunia hari ini.</string>
    <string name="article_for_you"><b>Article for you</b></string>
    <string name="preference"><b>Preference</b></string>
    <string name="account"><b>Account</b></string>
    <string name="log_out"><b> Log Out</b></string>
    <string name="lifestyle"><b>LifeStyle</b></string>
    <string name="daily_motivation">Daily Motivation</string>
    <string name="exercises">Good Morning! Here’s our recommendation for your Morning exercise!</string>
    <string name="set_1">Set 1</string>
    <string name="see_more">See More</string>
    <string name="exercise">EXERCISE</string>
    <string name="foodrecom"><b>Food Recommendation For You</b></string>
    <string name="forum">Forum</string>
</resources>