<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/box_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/ivLoginLogo_activity_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clLoginBox_activity_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoginBox_activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/box_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0">
        <TextView
            android:id="@+id/tvWelcomeBack_activity_login"
            android:text="@string/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsernameLogin_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="150dp"
            app:boxBackgroundMode="none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <EditText
                android:id="@+id/etUsernameLogin_activity_login"
                android:hint="Email/Username"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordLogin_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUsernameLogin_activity_login">
            <EditText
                android:id="@+id/etPasswordLogin_activity_login"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnLogin_activity_login"
            android:text="Login"
            android:textSize="15sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:background="@drawable/box_button"
            app:layout_constraintTop_toBottomOf="@+id/tilPasswordLogin_activity_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tvDontHaveAnAccount_activity_login"
            android:text="@string/don_t_have_an_account_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:layout_marginEnd="60dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin_activity_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvRegister_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/open_sans"
            android:text="@string/register_here"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDontHaveAnAccount_activity_login"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin_activity_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>