<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF6F6"
    tools:context=".MainActivity">

    <!-- LAYOUT HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LayoutHeader"
        android:background="@drawable/header_background"
        android:padding="40dp"
        android:elevation="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:text="@string/user"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tvWelcome"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_userIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@id/tvUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/usericon"
            android:layout_marginStart="25dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHeader"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/menuBar"
        android:background="@drawable/menu_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp">

        <ImageButton
            android:id="@+id/btn_homeButton_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/biggerhomeclicked2"
            app:layout_constraintTop_toTopOf="@+id/menuBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp"
            android:background="@null"
            />

        <ImageButton
            android:id="@+id/btn_chatButton_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_homeButton_activity_main"
            android:src="@drawable/unclickedchatbtn"
            android:clickable="true"
            android:background="@null"
            />

        <ImageButton
            android:id="@+id/btn_lifestyleButton_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_homeButton_activity_main"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/unclickedlifestylebtn"
            android:background="@null"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 4 CARD DI BAWAH HEADER LAYOUT -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/navigationCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">


        <!-- CHAT WITH PSYCHOLOGIST -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/white_card"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/ivchatWithPsychologist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chatwithpsychologist"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvchatWithPsychologist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="5dp"/>


            <TextView
                android:id="@+id/tvchatWithPsychologist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Chat with Psychologist"
                android:textColor="@color/pink_darker7"
                app:layout_constraintTop_toBottomOf="@id/ivchatWithPsychologist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textSize="12sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- MAKE AN APPOINTMENT -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/white_card"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/ivmakeAnAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/makeanapointment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvmakeAnAppointment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="5dp"/>


            <TextView
                android:id="@+id/tvmakeAnAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Make an Appointment"
                android:textColor="@color/pink_darker7"
                app:layout_constraintTop_toBottomOf="@id/ivmakeAnAppointment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textSize="12sp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- FORUM -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/white_card">

            <ImageView
                android:id="@+id/ivforum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forum"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvForum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/tvForum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="Make an Appointment"
                android:textColor="@color/pink_darker7"
                app:layout_constraintTop_toBottomOf="@id/ivforum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textSize="12sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- SUICIDE HOTLINE BUTTON -->
    <Button
        android:id="@+id/btn_suicideHotline"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purplebox"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/suicide_hotline_panic_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigationCard" />

    <!-- TODAY'S REMINDER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_todaysReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_suicideHotline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/tv_todaysReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/today_s_reminder"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <!-- GAMBAR DAN PENGINGAT -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_todaysReminder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/white_card"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_reminderImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="18dp"
                android:src="@drawable/natureimage2"
                />

            <TextView
                android:id="@+id/tv_reminderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_reminderImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/tarik_nafas_tenangkan_pikiran_sejenak_dan_bersyukurlah_anda_masih_dapat_melihat_betapa_indahnya_dunia_hari_ini"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/pink_darker7"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ARTIKEL -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cl_todaysReminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/menuBar"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_articleforyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/article_for_you"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"/>

        <!-- KARTU ARTIKEL -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_articleforyou"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_articleforyou"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:background="@drawable/white_card">

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>